--- a/src/components/ManageSpace/style.scss
+++ b/src/components/ManageSpace/style.scss
@@ -44,7 +44,7 @@
     .list-view-header {
       display: grid;
       border-bottom: 1px solid var(--color-background-5);
-      grid-template-columns: repeat(2, 1fr) auto;
+      grid-template-columns: repeat(3, minmax(10px, 1fr));
       padding: 10px;
       justify-content: flex-start;
 
